Updated newsletter batch